--- a/DriverBehaviour.ipynb
+++ b/DriverBehaviour.ipynb
@@ -1504,47 +1504,53 @@
       "metadata": {
         "id": "xlWNbTmQhyX-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ec6e80ea-d901-4f47-b4b0-e459621757ff"
       },
       "cell_type": "code",
       "source": [
-        "df[\"Serial No.\"] = serial\n",
-        "from sklearn.cluster import KMeans\n",
-        "wcss = []\n",
-        "for k in range(1,15):\n",
-        "    kmeans = KMeans(n_clusters=k)\n",
-        "    kmeans.fit(x)\n",
-        "    wcss.append(kmeans.inertia_)\n",
-        "plt.plot(range(1,15),wcss)\n",
-        "plt.xlabel(\"k values\")\n",
-        "plt.ylabel(\"WCSS\")\n",
-        "plt.show()\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/Anandharajan/DriverBehaviour/master/driver.csv\",sep = \",\")\n",
+        "df=df.rename(columns = {'accident ':'accident'})\n",
+        "newDF = pd.DataFrame()\n",
+        "newDF[\"vehispeed\"] = df[\"vehispeed\"]\n",
+        "newDF[\"yawrat\"] = df[\"yawrat\"]\n",
+        "newDF[\"steerangle\"] = df[\"steerangle\"]\n",
+        "newDF[\"accident\"] = df[\"accident\"]\n",
         "\n",
-        "kmeans = KMeans(n_clusters=3)\n",
-        "clusters_knn = kmeans.fit_predict(x)\n",
+        "y_new = df[\"accident\"].values\n",
+        "x_new = df.drop([\"accident\"],axis=1)\n",
         "\n",
-        "df[\"label_kmeans\"] = clusters_knn\n",
+        "# separating train (80%) and test (%20) sets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train_new, x_test_new,y_train_new, y_test_new = train_test_split(x_new,y_new,test_size = 0.20,random_state = 42)\n",
         "\n",
+        "# normalization\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "scalerX = MinMaxScaler(feature_range=(0, 1))\n",
+        "x_train[x_train.columns] = scalerX.fit_transform(x_train[x_train.columns])\n",
+        "x_test[x_test.columns] = scalerX.transform(x_test[x_test.columns])\n",
         "\n",
-        "plt.scatter(df[df.label_kmeans == 0 ][\"Serial No.\"],df[df.label_kmeans == 0].ChanceOfAdmit,color = \"red\")\n",
-        "plt.scatter(df[df.label_kmeans == 1 ][\"Serial No.\"],df[df.label_kmeans == 1].ChanceOfAdmit,color = \"blue\")\n",
-        "plt.scatter(df[df.label_kmeans == 2 ][\"Serial No.\"],df[df.label_kmeans == 2].ChanceOfAdmit,color = \"green\")\n",
-        "plt.title(\"K-means Clustering\")\n",
-        "plt.xlabel(\"Candidates\")\n",
-        "plt.ylabel(\"Chance of Admit\")\n",
-        "plt.show()\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "lr_new = LinearRegression()\n",
+        "lr_new.fit(x_train_new,y_train_new)\n",
+        "y_head_lr_new = lr_new.predict(x_test_new)\n",
         "\n",
-        "df[\"label_kmeans\"] = clusters_knn\n",
-        "plt.scatter(data.x[df.label_kmeans == 0 ],data[df.label_kmeans == 0].y,color = \"red\")\n",
-        "plt.scatter(data.x[df.label_kmeans == 1 ],data[df.label_kmeans == 1].y,color = \"blue\")\n",
-        "plt.scatter(data.x[df.label_kmeans == 2 ],data[df.label_kmeans == 2].y,color = \"green\")\n",
-        "plt.title(\"K-means Clustering\")\n",
-        "plt.xlabel(\"X\")\n",
-        "plt.ylabel(\"Chance of Admit\")\n",
-        "plt.show()"
+        "from sklearn.metrics import r2_score\n",
+        "print(\"r_square score: \", r2_score(y_test_new,y_head_lr_new))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "r_square score:  0.9163788137435881\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
