--- a/autism.ipynb
+++ b/autism.ipynb
@@ -54,6 +54,326 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "EbgG3f6T5tm0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "outputId": "03a57f60-700d-4394-a9da-3b9207c529c1"
+      },
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>A1_Score</th>\n",
+              "      <th>A2_Score</th>\n",
+              "      <th>A3_Score</th>\n",
+              "      <th>A4_Score</th>\n",
+              "      <th>A5_Score</th>\n",
+              "      <th>A6_Score</th>\n",
+              "      <th>A7_Score</th>\n",
+              "      <th>A8_Score</th>\n",
+              "      <th>A9_Score</th>\n",
+              "      <th>A10_Score</th>\n",
+              "      <th>age</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>ethnicity</th>\n",
+              "      <th>jundice</th>\n",
+              "      <th>autism</th>\n",
+              "      <th>contry_of_res</th>\n",
+              "      <th>result</th>\n",
+              "      <th>relation</th>\n",
+              "      <th>asd</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>m</td>\n",
+              "      <td>Others</td>\n",
+              "      <td>no</td>\n",
+              "      <td>no</td>\n",
+              "      <td>Jordan</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Parent</td>\n",
+              "      <td>NO</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>m</td>\n",
+              "      <td>Middle Eastern '</td>\n",
+              "      <td>no</td>\n",
+              "      <td>no</td>\n",
+              "      <td>Jordan</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Parent</td>\n",
+              "      <td>NO</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>m</td>\n",
+              "      <td>?</td>\n",
+              "      <td>no</td>\n",
+              "      <td>no</td>\n",
+              "      <td>Jordan</td>\n",
+              "      <td>5</td>\n",
+              "      <td>?</td>\n",
+              "      <td>NO</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>f</td>\n",
+              "      <td>?</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>no</td>\n",
+              "      <td>Jordan</td>\n",
+              "      <td>4</td>\n",
+              "      <td>?</td>\n",
+              "      <td>NO</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>m</td>\n",
+              "      <td>Others</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>no</td>\n",
+              "      <td>United States'</td>\n",
+              "      <td>10</td>\n",
+              "      <td>Parent</td>\n",
+              "      <td>YES</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   A1_Score  A2_Score   A3_Score   A4_Score   A5_Score   A6_Score   A7_Score   \\\n",
+              "0         1          1          0          0          1          1          0   \n",
+              "1         1          1          0          0          1          1          0   \n",
+              "2         1          1          0          0          0          1          1   \n",
+              "3         0          1          0          0          1          1          0   \n",
+              "4         1          1          1          1          1          1          1   \n",
+              "\n",
+              "   A8_Score   A9_Score   A10_Score  age gender         ethnicity jundice  \\\n",
+              "0          1          0           0   6      m            Others      no   \n",
+              "1          1          0           0   6      m  Middle Eastern '      no   \n",
+              "2          1          0           0   6      m                 ?      no   \n",
+              "3          0          0           1   5      f                 ?     yes   \n",
+              "4          1          1           1   5      m            Others     yes   \n",
+              "\n",
+              "  autism  contry_of_res   result relation  asd  \n",
+              "0     no          Jordan       5   Parent   NO  \n",
+              "1     no          Jordan       5   Parent   NO  \n",
+              "2     no          Jordan       5        ?   NO  \n",
+              "3     no          Jordan       4        ?   NO  \n",
+              "4     no  United States'      10   Parent  YES  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "F56ApXUe55CJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "cafc885a-ec08-4d83-fc33-4ac27163aa77"
+      },
+      "cell_type": "code",
+      "source": [
+        "df.autism.value_counts()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "no     243\n",
+              "yes     49\n",
+              "Name: autism, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "XFfL4LhVM51I",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "df['autism'] = df['autism'].apply(lambda x: 0 if x=='no' else 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "YO6ZOL6QNpcO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "df['asd'] = df['asd'].apply(lambda x: 0 if x=='NO' else 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "7Euoabz37orQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "a1bfde2b-7c3d-47f9-f3e5-32673e8fd5fb"
+      },
+      "cell_type": "code",
+      "source": [
+        "countNoAutism = len(df[df.autism == 0])\n",
+        "countHaveAutism = len(df[df.autism == 1])\n",
+        "print(\"Percentage of Patients Haven't Autism: {:.2f}%\".format((countNoAutism / (len(df.autism))*100)))\n",
+        "print(\"Percentage of Patients Have Autism: {:.2f}%\".format((countHaveAutism / (len(df.autism))*100)))"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Percentage of Patients Haven't Autism: 83.22%\n",
+            "Percentage of Patients Have Autism: 16.78%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "4i31GWilPZQJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "e44992cb-5fcc-4de5-b352-c3603023540e"
+      },
+      "cell_type": "code",
+      "source": [
+        "countNoASD = len(df[df.asd == 0])\n",
+        "countHaveASD = len(df[df.asd == 1])\n",
+        "print(\"Percentage of Patients Haven't ASD: {:.2f}%\".format((countNoASD / (len(df.asd))*100)))\n",
+        "print(\"Percentage of Patients Have ASD: {:.2f}%\".format((countHaveASD / (len(df.asd))*100)))"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Percentage of Patients Haven't ASD: 51.71%\n",
+            "Percentage of Patients Have ASD: 48.29%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
